@@ -5,6 +5,7 @@ import fr.epita.patients.datamodel.Patient;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
@@ -23,6 +24,7 @@ public class PatientCSVExtractionService {
             throw new PatientExtractionException(e);
         }
         List<Patient> patients = new ArrayList<>();
+        lines.remove(0);
         for (String line : lines){
             String[] parts = line.split(";");
             Patient patient = extractPatient(parts);
@@ -33,21 +35,20 @@ public class PatientCSVExtractionService {
 
     public void update(List<Patient> patients) throws PatientExtractionException, PatientUpdateException {
         Path currentFilePath = Path.of("patients-data-extraction/data/patients-out.csv");
-        System.out.println("looking for file at this location:" + currentFilePath.toFile().getAbsolutePath());
-        String patientsasCSV = "";
-
-        for (Patient p : patients){
-            patientsasCSV += p.getHealthCareNumber()+";";
-            patientsasCSV += p.getLastName()+";";
-            patientsasCSV += p.getFirstName()+";";
-            patientsasCSV += p.getAddress()+";";
-            patientsasCSV += p.getPhoneNumber()+";";
-            patientsasCSV += p.getInsuranceId()+";";
-            patientsasCSV += p.getSubscriptionDate().format( DateTimeFormatter.ofPattern("dd/MM/yyyy"));
-            patientsasCSV += "\n";
+        String patientsAsCsv = "";
+        for (Patient patient : patients){
+            //pat_num_HC;pat_lastname;pat_firstname;pat_address;pat_tel;pat_insurance_id;pat_subscription_date
+            patientsAsCsv += patient.getHealthCareNumber() +";";
+            patientsAsCsv += patient.getLastName() +";";
+            patientsAsCsv += patient.getFirstName() +";";
+            patientsAsCsv += patient.getAddress() +";";
+            patientsAsCsv += patient.getPhoneNumber() +";";
+            patientsAsCsv += patient.getInsuranceId() +";";
+            patientsAsCsv += patient.getSubscriptionDate().format( DateTimeFormatter.ofPattern("dd/MM/yyyy"));
+            patientsAsCsv += System.getProperty("line.separator");
         }
         try {
-            Files.writeString(currentFilePath, "", StandardOpenOption.WRITE);
+            Files.write(currentFilePath, patientsAsCsv.getBytes(), StandardOpenOption.WRITE);
         } catch (IOException e){
             throw new PatientUpdateException(e);
         }
